Fix alarm names/descriptions; configure db host

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -274,9 +274,9 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[][ALB][Error] LB 5XX" # TODO
+      AlarmName: "[Feeder v2][ALB][Error] LB 5XX" # TODO
       AlarmDescription: | # TODO
-        5XX load balancer errors originating from the load balancer
+        5XX load balancer errors originating from the feeder load balancer
       Dimensions:
         - Name: LoadBalancer
           Value: !GetAtt Alb.LoadBalancerFullName
@@ -292,9 +292,9 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[][ALB][TargetResponseTime] P95 extremely slow" # TODO
+      AlarmName: "[Feeder v2][ALB][TargetResponseTime] P95 extremely slow" # TODO
       AlarmDescription: | # TODO
-        Target response time value for ___ load balancer targets at 95th
+        Target response time value for feeder load balancer targets at 95th
         percentile higher than expected
       ComparisonOperator: GreaterThanOrEqualToThreshold
       Dimensions:
@@ -449,9 +449,9 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Metrics v2][ALB][Error] Target 5XX" # TODO
+      AlarmName: "[Feeder v2][ALB][Error] Target 5XX" # TODO
       AlarmDescription: >- # TODO
-        5XX server errors originating from the metrics target group exceeded 0
+        5XX server errors originating from the feeder target group exceeded 0
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
@@ -521,6 +521,8 @@ Resources:
               Value: !Ref AWS::Region
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
+            - Name: DB_PORT_5432_TCP_ADDR
+              Value: !Ref SharedRdsPostgresqlEndpoint
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -596,6 +598,8 @@ Resources:
               Value: !Ref AWS::Region
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
+            - Name: DB_PORT_5432_TCP_ADDR
+              Value: !Ref SharedRdsPostgresqlEndpoint
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
