Add Family Ghosts feed CDN DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -160,3 +160,7 @@ Resources:
         # Culturverse
         - { Type: A, Name: !Sub "pf0506aoic.${Domain}", AliasTarget: { DNSName: "d352emf7uuhhqn.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf0506aoic.${Domain}", AliasTarget: { DNSName: "d352emf7uuhhqn.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Family Ghosts
+        - { Type: A, Name: !Sub "pf1611fmgt.${Domain}", AliasTarget: { DNSName: "d102xy0478dhrf.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf1611fmgt.${Domain}", AliasTarget: { DNSName: "d102xy0478dhrf.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
