Clean up refactored apps alarms

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -198,6 +198,7 @@ Resources:
         - !Ref CloudFormationNotificationArn
       Parameters:
         EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CodeS3Bucket: !Ref DeploymentPackageBucketName
