--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -92,9 +92,10 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Metrics v2][ALB][Error] Target 5XX" # TODO
-      AlarmDescription: >- # TODO
-        5XX server errors originating from the metrics target group exceeded 0
+      AlarmName: !Sub ERROR [Augury] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Augury's Rails server is returning 5XX errors from
+        the ECS service to the load balancer.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
