--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -408,9 +408,10 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Metrics v2][ALB][Error] Target 5XX" # TODO
-      AlarmDescription: >- # TODO
-        5XX server errors originating from the metrics target group exceeded 0
+      AlarmName: !Sub ERROR [Dovetail-Router] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Dovetail Router's Elixer server is returning 5XX
+        errors from the ECS service to the load balancer.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
