--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -274,9 +274,11 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Feeder v2][ALB][Error] LB 5XX" # TODO
-      AlarmDescription: | # TODO
-        5XX load balancer errors originating from the feeder load balancer
+      AlarmName: !Sub ERROR [Feeder] Load balancer <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Feeder's dedicated application load balancer (ALB)
+        is returning 5XX errors to clients. The errors may or may not be
+        originating from applications behind the ALB.
       Dimensions:
         - Name: LoadBalancer
           Value: !GetAtt Alb.LoadBalancerFullName
@@ -292,10 +294,11 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Feeder v2][ALB][TargetResponseTime] P95 extremely slow" # TODO
-      AlarmDescription: | # TODO
-        Target response time value for feeder load balancer targets at 95th
-        percentile higher than expected
+      AlarmName: !Sub ERROR [Feeder] Load balancer <${EnvironmentTypeAbbreviation}> RESPONDING SLOWLY
+      AlarmDescription: !Sub >- # TODO
+        ${EnvironmentType} Feeder's dedicated application load balancer (ALB)
+        is seeing very slow response times for a significant percent of the
+        traffic it's handling.
       ComparisonOperator: GreaterThanOrEqualToThreshold
       Dimensions:
         - Name: LoadBalancer
@@ -449,9 +452,10 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Feeder v2][ALB][Error] Target 5XX" # TODO
-      AlarmDescription: >- # TODO
-        5XX server errors originating from the feeder target group exceeded 0
+      AlarmName: !Sub ERROR [Feeder] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Feeder's Rails server is returning 5XX errors from
+        the ECS service to the load balancer.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
