--- a/stacks/apps/grove.yml
+++ b/stacks/apps/grove.yml
@@ -73,9 +73,10 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Grove v2][ALB][Error] Target 5XX" # TODO
-      AlarmDescription: >- # TODO
-        5XX server errors originating from the grove target group exceeded 0
+      AlarmName: !Sub ERROR [Grove] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Grove's Express server is returning 5XX errors from
+        the ECS service to the load balancer.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
