--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -141,9 +141,10 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Play v2][ALB][Error] Target 5XX" # TODO
-      AlarmDescription: >- # TODO
-        5XX server errors originating from the play target group exceeded 0
+      AlarmName: !Sub ERROR [Play] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Play's Express server is returning 5XX errors from
+        the ECS service to the load balancer.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
@@ -260,9 +261,10 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Play v2][ALB][Error] Proxy Target 5XX" # TODO
-      AlarmDescription: >- # TODO
-        5XX server errors originating from the play proxy target group exceeded 0
+      AlarmName: !Sub ERROR [Play] Proxy server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Play's feed proxy server is returning 5XX errors
+        from the ECS service to the load balancer.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
