--- a/stacks/apps/styleguide.yml
+++ b/stacks/apps/styleguide.yml
@@ -72,9 +72,10 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Styleguide v2][ALB][Error] Target 5XX" # TODO
-      AlarmDescription: >- # TODO
-        5XX server errors originating from the styleguide target group exceeded 0
+      AlarmName: !Sub INFO [Styleguide] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Styleguide's Storybook server is returning 5XX
+        errors from the ECS service to the load balancer.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
