--- a/stacks/apps/iframely.yml
+++ b/stacks/apps/iframely.yml
@@ -85,9 +85,10 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Metrics v2][ALB][Error] Target 5XX" # TODO
-      AlarmDescription: >- # TODO
-        5XX server errors originating from the metrics target group exceeded 0
+      AlarmName: !Sub ERROR [Iframely] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmDescription: !Sub >- # TODO
+        ${EnvironmentType} Iframely's web server is returning 5XX errors from
+        the ECS service to the load balancer.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
