--- a/stacks/apps/metrics.yml
+++ b/stacks/apps/metrics.yml
@@ -75,9 +75,10 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Metrics v2][ALB][Error] Target 5XX" # TODO
-      AlarmDescription: >- # TODO
-        5XX server errors originating from the metrics target group exceeded 0
+      AlarmName: !Sub ERROR [Metrics] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Metrics's Express server is returning 5XX errors
+        from the ECS service to the load balancer.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
