Cleanup refactored templates

--- a/stacks/apps/dovetail-legacy.yml
+++ b/stacks/apps/dovetail-legacy.yml
@@ -1,7 +1,9 @@
 # stacks/apps/dovetail-legacy.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: metrics.prx.org application running in Docker # TODO
+Description: >-
+  Creates an ECS service for the Node.js Dovetail web server (i.e.. Dovetail
+  version 2), along with target group and listener rule for the dedicated ALB.
 
 Parameters:
   kContainerName:
@@ -59,7 +61,7 @@ Resources:
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:family, Value: Dovetail }
-        - { Key: prx:dev:application, Value: Router } # TODO
+        - { Key: prx:dev:application, Value: Node.js }
       TargetType: instance
       UnhealthyThresholdCount: 2
       VpcId: !Ref VpcId
@@ -109,7 +111,7 @@ Resources:
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:family, Value: Dovetail }
-        - { Key: prx:dev:application, Value: Router } # TODO
+        - { Key: prx:dev:application, Value: Node.js }
       TaskDefinition: !Ref TaskDefinition
 
   TaskLogGroup:
@@ -134,7 +136,7 @@ Resources:
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:family, Value: Dovetail }
-        - { Key: prx:dev:application, Value: Router } # TODO
+        - { Key: prx:dev:application, Value: Node.js }
   TaskRole:
     Type: AWS::IAM::Role
     Properties:
@@ -154,7 +156,7 @@ Resources:
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:family, Value: Dovetail }
-        - { Key: prx:dev:application, Value: Router } # TODO
+        - { Key: prx:dev:application, Value: Node.js }
   TaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
@@ -195,5 +197,5 @@ Resources:
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:family, Value: Dovetail }
-        - { Key: prx:dev:application, Value: Router } # TODO
+        - { Key: prx:dev:application, Value: Node.js }
       TaskRoleArn: !GetAtt TaskRole.Arn
