--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -295,7 +295,7 @@ Resources:
     Condition: IsProduction
     Properties:
       AlarmName: !Sub ERROR [Feeder] Load balancer <${EnvironmentTypeAbbreviation}> RESPONDING SLOWLY
-      AlarmDescription: !Sub >- # TODO
+      AlarmDescription: !Sub >-
         ${EnvironmentType} Feeder's dedicated application load balancer (ALB)
         is seeing very slow response times for a significant percent of the
         traffic it's handling.
