--- a/stacks/apps/iframely.yml
+++ b/stacks/apps/iframely.yml
@@ -86,7 +86,7 @@ Resources:
     Condition: IsProduction
     Properties:
       AlarmName: !Sub ERROR [Iframely] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
-      AlarmDescription: !Sub >- # TODO
+      AlarmDescription: !Sub >-
         ${EnvironmentType} Iframely's web server is returning 5XX errors from
         the ECS service to the load balancer.
       ComparisonOperator: GreaterThanThreshold
