--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -290,7 +290,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Castle] Redis <${EnvironmentTypeAbbreviation}> HIGH MEMORY USAGE
+      AlarmName: !Sub WARN [Castle] Redis <${EnvironmentTypeAbbreviation}> HIGH MEMORY USAGE
       AlarmDescription: !Sub >-
         ${EnvironmentType} Castle Redis's database memory usage has exceeded
         the recommended safe level
@@ -309,9 +309,10 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Castle][Redis][Memory] Memory usage exceeded 93%" # TODO
-      AlarmDescription: >-
-        Max Redis database memory usage exceeded 93% for two consecutive periods
+      AlarmName: !Sub ERROR [Castle] Redis <${EnvironmentTypeAbbreviation}> VERY HIGH MEMORY USAGE
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Castle Redis's database memory usage has reached a
+        critically high level
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: CacheClusterId
