Add AoI feed DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -164,3 +164,7 @@ Resources:
         # Family Ghosts
         - { Type: A, Name: !Sub "pf1611fmgt.${Domain}", AliasTarget: { DNSName: "d102xy0478dhrf.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf1611fmgt.${Domain}", AliasTarget: { DNSName: "d102xy0478dhrf.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Articles of Interest
+        - { Type: A, Name: !Sub "pf4507arti.${Domain}", AliasTarget: { DNSName: "d1zo9zhh10nmxe.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf4507arti.${Domain}", AliasTarget: { DNSName: "d1zo9zhh10nmxe.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
