Improve new Dovetail DNS records

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -7,23 +7,6 @@ Description: >-
   resources, which run on the same ALB.
 
 Mappings:
-  Domains:
-    # The ServiceDomain is the name used to create alias records in each region
-    # for the load balancer. Having multiple records with the same name in this
-    # way creates latency records. This is the domain responsible for both
-    # the multi-region latency-based routing policy, and health checks and
-    # failover. The health of any given DNS record (i.e., region) is based on
-    # the health of the load balancer being targeted by the alias. The health
-    # of the load balancer is in turn based on the health of its target groups.
-    # A load balancer is only considered healthy (and thus a possible return
-    # value of the service domain) if all target groups contain at least one
-    # healthy target.
-    # https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/routing-policy.html#routing-policy-latency
-    # https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/resource-record-sets-values-latency-alias.html
-    Staging:
-      ServiceDomain: dt3-alpha-stag.prx.tech # TODO
-    Production:
-      ServiceDomain: dt3-alpha.prx.tech # TODO
   ElbService:
     # https://docs.aws.amazon.com/elasticloadbalancing/latest/application/load-balancer-access-logs.html#access-logging-bucket-permissions
     us-east-1:
@@ -107,7 +90,19 @@ Resources:
     Properties:
       ServiceToken: !Ref EchoServiceToken
       VanityAlbDomain: !Sub dovetail.dualstack.${Alb.DNSName}.${EnvironmentTypeAbbreviation}.prx.tech
-      ServiceDomain: !FindInMap [Domains, !Ref EnvironmentType, ServiceDomain]
+      # The ServiceDomain is the name used to create alias records in each region
+      # for the load balancer. Having multiple records with the same name in this
+      # way creates latency records. This is the domain responsible for both
+      # the multi-region latency-based routing policy, and health checks and
+      # failover. The health of any given DNS record (i.e., region) is based on
+      # the health of the load balancer being targeted by the alias. The health
+      # of the load balancer is in turn based on the health of its target groups.
+      # A load balancer is only considered healthy (and thus a possible return
+      # value of the service domain) if all target groups contain at least one
+      # healthy target.
+      # https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/routing-policy.html#routing-policy-latency
+      # https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/resource-record-sets-values-latency-alias.html
+      ServiceDomain: !Sub dovetail-router-alb-latency-group.${EnvironmentTypeAbbreviation}.prx.tech
 
   Certificate:
     # This certificate does not include an entry for the service domain, since
@@ -120,7 +115,7 @@ Resources:
       DomainName: !If [IsProduction, dovetail.prxu.org, dovetail.staging.prxu.org]
       SubjectAlternativeNames:
         - !GetAtt Constants.VanityAlbDomain
-        - !GetAtt Constants.ServiceDomain # TODO Should not exist
+        # - !GetAtt Constants.ServiceDomain # TODO Should not exist
       Tags:
         - { Key: Name, Value: !Sub "${RootStackName}_dovetail_${Alb.LoadBalancerName}" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -133,11 +128,16 @@ Resources:
         - { Key: prx:dev:application, Value: Router }
       ValidationMethod: DNS
 
+  # The vanity ALB domain provides direct access to the ALB created in this
+  # template. It's essentially an alternative to the xxxx.elb.amazonaws.com
+  # domain provided with each ALB, but lives at a PRX-owned domain and includes
+  # some context clues, like the environment type.
   VanityAlbDomainRecordSetGroup:
     Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: !Sub >- # TODO
-        Record sets for dualstack traffic to the Dovetail ${EnvironmentType} ALB
+        Record sets that provide direct access to a specific Dovetail
+        ${EnvironmentType} ALB
       HostedZoneName: prx.tech.
       RecordSets:
         - AliasTarget:
@@ -150,11 +150,19 @@ Resources:
             HostedZoneId: !GetAtt Alb.CanonicalHostedZoneID
           Name: !GetAtt Constants.VanityAlbDomain
           Type: A
+  # The service failover domain is a domain that is the SAME FOR ALL REGIONS.
+  # This is the mechanism that Route 53 uses to add load balancers to a latancy
+  # group. All ALBs for a given environment type should use the exact same
+  # `Name` value for these records, but have unique `SetIdentifier` values.
+  # When ALIAS latency records target a load balancer, Route 53 automatically
+  # determines the health of the load balancer to determine if it should be
+  # included in the pool of possible responses. The domain name is largely
+  # immaterial, since it is used exclusively for DNS queries within Route 53.
   ServiceFailoverRecordSetGroup:
     Type: AWS::Route53::RecordSetGroup
     Properties:
-      Comment: !Sub >- # TODO
-        Record sets for dualstack traffic to the Dovetail ${EnvironmentType} ALB
+      Comment: !Sub >-
+        Latency record for the Dovetail ${EnvironmentType} ALB
       HostedZoneName: prx.tech.
       RecordSets:
         - AliasTarget:
