--- a/stacks/container-apps/play.prx.org.yml
+++ b/stacks/container-apps/play.prx.org.yml
@@ -246,7 +246,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: CreateProductionResources
     Properties:
-      AlarmName: "[Metrics v2][ALB][Error] Proxy Target 5XX" # TODO
+      AlarmName: "[Play][ALB][Error] Proxy Target 5XX" # TODO
       AlarmDescription: >- # TODO
         5XX server errors originating from the play proxy target group exceeded 0
       ComparisonOperator: GreaterThanThreshold
