--- a/db/shared-apps-aurora-pg.yml
+++ b/db/shared-apps-aurora-pg.yml
@@ -1,4 +1,4 @@
-# TODO stacks/metrics.prx.org.yml temp-aurora-pg-test
+# db/shared-apps-aurora-pg.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: >-
