--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -115,7 +115,6 @@ Resources:
       DomainName: !If [IsProduction, dovetail.prxu.org, dovetail.staging.prxu.org]
       SubjectAlternativeNames:
         - !GetAtt Constants.VanityAlbDomain
-        # - !GetAtt Constants.ServiceDomain # TODO Should not exist
       Tags:
         - { Key: Name, Value: !Sub "${RootStackName}_dovetail_${Alb.LoadBalancerName}" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -135,7 +134,7 @@ Resources:
   VanityAlbDomainRecordSetGroup:
     Type: AWS::Route53::RecordSetGroup
     Properties:
-      Comment: !Sub >- # TODO
+      Comment: !Sub >-
         Record sets that provide direct access to a specific Dovetail
         ${EnvironmentType} ALB
       HostedZoneName: prx.tech.
