--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -222,6 +222,7 @@ Resources:
         - !Ref CloudFormationNotificationArn
       Parameters:
         EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         CodeS3ObjectKey: !Ref S3SigningLambdaCodeS3ObjectKey
         RootStackName: !Ref RootStackName
