--- a/stacks/apps/s3-signing.yml
+++ b/stacks/apps/s3-signing.yml
@@ -11,6 +11,7 @@ Parameters:
   CodeS3Bucket: { Type: String }
   CodeS3ObjectKey: { Type: String }
   EnvironmentType: { Type: String }
+  EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
 
